[gd_scene load_steps=10 format=3 uid="uid://gkhgo4bwhgk3"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_27aju"]
[ext_resource type="PackedScene" uid="uid://2awyr1wpho11" path="res://scenes/player/player.tscn" id="1_uv0vl"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_w07co"]
[ext_resource type="PackedScene" uid="uid://03kfptvy21wh" path="res://scenes/UI/PauseMenu.tscn" id="4_safpi"]
[ext_resource type="Script" path="res://scripts/player/PlayerCamera.gd" id="5_2pdp4"]
[ext_resource type="PackedScene" uid="uid://jifl0l07156k" path="res://scenes/environment/temp_next_level_portal.tscn" id="5_s1efa"]
[ext_resource type="PackedScene" uid="uid://b8egjwpuu0o1k" path="res://scenes/environment/Prototype.tscn" id="7_jg5c8"]
[ext_resource type="PackedScene" uid="uid://crukm7jowy8fp" path="res://scenes/environment/SceneTransitionAnimation.tscn" id="8_t3qgq"]
[ext_resource type="PackedScene" uid="uid://c8ruaw5a416to" path="res://scenes/environment/BannerTransition.tscn" id="8_temm4"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_27aju")

[node name="GameManager" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("1_w07co")

[node name="Player" type="Node" parent="."]
process_mode = 3

[node name="Player" parent="Player" instance=ExtResource("1_uv0vl")]
process_mode = 1
position = Vector2(-16, -27)
collision_layer = 3

[node name="PlayerCamera" type="Camera2D" parent="Player"]
position = Vector2(-20, -19)
process_callback = 0
limit_left = -825
limit_top = -900
limit_right = 825
limit_bottom = 200
position_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("5_2pdp4")

[node name="CanvasLayer" type="CanvasLayer" parent="Player/PlayerCamera"]

[node name="PauseMenu" parent="Player/PlayerCamera/CanvasLayer" instance=ExtResource("4_safpi")]
process_mode = 3
visible = false
offset_left = -124.0
offset_top = -126.0
offset_right = -124.0
offset_bottom = -126.0
scale = Vector2(3.11947, 3.11947)

[node name="TempNextLevelPortal" parent="." instance=ExtResource("5_s1efa")]
process_mode = 1
position = Vector2(22, -9)

[node name="SpawnedItems" type="Node" parent="."]
process_mode = 1

[node name="Prototype" parent="." instance=ExtResource("7_jg5c8")]

[node name="BannerTransition" parent="." instance=ExtResource("8_temm4")]
position = Vector2(-933, -309)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("8_t3qgq")]
position = Vector2(-933, -309)
